[metadata]
description_file = README.md
license_files = LICENSE

[coverage:run]
omit =
    venv/**
    */tests/**
    setup.py

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:

[coverage:xml]
output = _build/coverage/coverage.xml

[coverage:html]
title = Coverage Report
directory = _build/coverage